# talos3D

./: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  USAGE.md  WORKTREE_PURPOSE.md  index.html  mkdocs.yml
.github/workflows/: ci.yml
app/: Cargo.toml
app-core/: Cargo.toml
app-core/src/: main.rs
app/src/: main.rs
app/tests/: adr042_attic_truss_vertical_slice.rs  curation_authoring_script.rs  curation_synthesis.rs  model_api_architectural.rs  model_api_assembly.rs  model_api_bbr_stair.rs  model_api_corpus_ops.rs  model_api_recipe_foundation.rs  model_api_recipe_roof.rs
app/tests/fixtures/cadio/: survey_oracle.json
assets/materials/: library.json
crates/talos3d-architectural/: Cargo.toml
crates/talos3d-architectural/examples/: promote_pavilion.rs
crates/talos3d-architectural/src/: architectural_plugin.rs  components.rs  create_commands.rs  hosted_layout.rs  lib.rs  mesh_generation.rs  rules.rs  snapshots.rs
crates/talos3d-architectural/src/recipes/: foundation_pier.rs  foundation_slab_on_grade.rs  mod.rs  roof_shed_framing.rs  wall_light_frame_exterior.rs
crates/talos3d-architectural/src/tools/: building_pad_tool.rs  mod.rs  opening_tool.rs  wall_tool.rs
crates/talos3d-architectural/src/validators/: assembly_completeness.rs  host_opening.rs  mod.rs  support_path.rs
crates/talos3d-catalog-client/: Cargo.toml
crates/talos3d-catalog-client/examples/: subscribe.rs
crates/talos3d-catalog-client/src/: cache.rs  changes.rs  client.rs  dto.rs  error.rs  lib.rs  publish.rs
crates/talos3d-catalog-client/tests/: round_trip.rs
crates/talos3d-core/: Cargo.toml
crates/talos3d-core/data/definition_libraries/: architecture_double_window.json
crates/talos3d-core/examples/: correlate_dwg_dxf.rs  dump_dxf_handles.rs
crates/talos3d-core/src/: authored_entity.rs  capability_registry.rs  lib.rs
crates/talos3d-core/src/curation/: api.rs  assembly_pattern_v2.rs  authoring_script.rs  compat_shim.rs  compatibility.rs  dependencies.rs  entitlement.rs  identity.rs  manifests.rs  material_specs.rs  meta.rs  mod.rs  nomination.rs  pack.rs  plugin.rs  policy.rs  procedural_session.rs  provenance.rs  publication.rs  recipes.rs  registry.rs  replay.rs  scope_trust.rs  source.rs  synthesis.rs
crates/talos3d-core/src/importers/: dxf.rs  mod.rs  obj.rs
crates/talos3d-core/src/plugins/: agent_skills.rs  assembly_pattern_drafts.rs  asset_browser.rs  assistant_chat.rs  assumption_log.rs  authoring_guidance.rs  browser_mcp.rs  bundled_definition_libraries.rs  camera.rs  clipping_planes.rs  command_registry.rs  commands.rs  compass.rs  constraint_spec.rs  corpus_gap.rs  cursor.rs  definition_authoring.rs  definition_browser.rs  definition_preview_scene.rs  dependency_panel.rs  dimension_line.rs  document_properties.rs  document_state.rs  drawing_export.rs  egui_chrome.rs  entity_labels.rs  export_fidelity.rs  face_edit.rs  grid.rs  grounding_gate.rs  guide_line.rs  handles.rs  history.rs  hosting_contracts.rs  icons.rs  identity.rs  import.rs  inference.rs  input_ownership.rs  interference.rs  (+46 more)
crates/talos3d-core/src/plugins/drafting/: PHASE1_STATUS.md  annotation.rs  export_dxf.rs  export_svg.rs  format.rs  kind.rs  migration.rs  mod.rs  plugin.rs  reference_test.rs  render.rs  style.rs  visibility.rs
crates/talos3d-core/src/plugins/drafting_sheet/: capture.rs  export_dxf.rs  export_pdf.rs  export_png.rs  export_svg.rs  mod.rs  preview.rs  sheet.rs
crates/talos3d-core/src/plugins/model_api/: profiles.rs  request.rs  server.rs  tests.rs  transport.rs  types.rs
crates/talos3d-core/src/plugins/modeling/: array.rs  assembly.rs  bim_material_assignment.rs  bsp_csg.rs  composite_solid.rs  csg.rs  definition.rs  dependency_graph.rs  editable_mesh.rs  exchange_identity.rs  fillet.rs  foundation.rs  generic_factory.rs  generic_snapshot.rs  geometry_health.rs  ghost_geometry.rs  group.rs  host_chart.rs  linked_model.rs  mesh_generation.rs  mirror.rs  mod.rs  occurrence.rs  primitive_trait.rs  primitives.rs  profile.rs  profile_feature.rs  property_sets.rs  quantity_set.rs  semantics.rs  snapshots.rs  solid_ops.rs  spatial_container.rs  triangulate.rs  void_declaration.rs
crates/talos3d-core/src/plugins/modeling/tools/: box_tool.rs  cylinder_tool.rs  mod.rs  plane_tool.rs  polyline_tool.rs  sphere_tool.rs
crates/talos3d-core/src/plugins/tools/: mod.rs
crates/talos3d-core/src/relational/: component.rs  graph.rs  incremental.rs  lock_solver.rs  mod.rs  parallel.rs  param_expr.rs  registry.rs  service.rs  transform.rs
crates/talos3d-core/src/storage/: artifact_store.rs  cloud.rs  local_file.rs  mod.rs  wire.rs
crates/talos3d-terrain/: Cargo.toml
crates/talos3d-terrain/src/: commands.rs  components.rs  conforming.rs  cut_fill.rs  fairing.rs  generation.rs  heightfield.rs  lib.rs  planting.rs  reconstruction.rs  review.rs  snapshots.rs  terrain_provider.rs  tools.rs  visualization.rs
docs/: ADR-024_RENDER_VIEW_STATE_COORDINATION.md  ADR-025_DRAWING_METADATA_BOUNDARY.md  ADR-026_MATERIAL_ARCHITECTURE_BOUNDARY.md  ASSISTANT_CHAT.md  CAPABILITY_PLUGIN_API.md  CORE_PRINCIPLES.md  DEVELOPER_ONBOARDING.md  DOMAIN_MODEL.md  DRONE_SURVEY_PIPELINE_NOTES.md  ENGINE_FORK_WORKFLOW.md  EXTENSION_ARCHITECTURE.md  GLOSSARY.md  MCP_AUTH_SECURITY_REVIEW.md  MCP_MODEL_API.md  PLAN_DRAWING_METADATA_AND_SECTION_VIEWS.md  PLAN_RENDER_AND_UX_STABILIZATION.md  PLAN_UX_TEST_HARNESS.md  PLATFORM_ARCHITECTURE.md  PRODUCT.md  SCENARIO_FILES.md  SYSTEM_ARCHITECTURE.md  TERRAIN_CONFORMING_FOUNDATIONS.md  TERRAIN_SITE_DRAPE_WORKFLOW.md  USER_MANUAL.md  index.md
src/: main.rs
tests/: adr026_bim_substrate_integration.rs  adr042_attic_truss_vertical_slice.rs  curation_authoring_script.rs  curation_packs.rs  curation_substrate.rs  curation_synthesis.rs  model_api_architectural.rs  model_api_assembly.rs  model_api_bbr_stair.rs  model_api_catalog.rs  model_api_corpus_ops.rs  model_api_generation_priors.rs  model_api_recipe_foundation.rs  model_api_recipe_roof.rs  model_api_recipe_wall.rs
(+39 files in other folders)
