[workspace]
members = [
    "crates/cadio-ir",
    "crates/cadio-dwg",
    "crates/cadio-tools",
    "crates/talos3d-capability-api",
    "crates/talos3d-core",
    "crates/talos3d-terrain",
]
exclude = ["app", "vendor"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

# The `talos3d` binary lives in `app/` and is its own workspace. It composes
# the public platform with optional domain extensions from sibling repos, so it
# is validated downstream. CI here checks only the self-contained public
# platform crates listed above.
