[workspace]
members = [
    "crates/cadio-ir",
    "crates/cadio-dwg",
    "crates/cadio-tools",
    "crates/talos3d-capability-api",
    "crates/talos3d-core",
    "crates/talos3d-terrain",
]
exclude = ["app", "vendor"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

[patch.crates-io]
# Fix bevy_egui scissor-rect crash on macOS first frame:
# clamp scissor to physical_target_size, not just viewport size.
bevy_egui = { path = "vendor/bevy_egui" }
egui = { path = "vendor/egui-0.33.3/egui" }
epaint = { path = "vendor/egui-0.33.3/epaint" }
emath = { path = "vendor/egui-0.33.3/emath" }
ecolor = { path = "vendor/egui-0.33.3/ecolor" }

# Local engine workflow notes:
# - Keep this vendored bevy_egui patch unless the bridge has been migrated.
# - Talos currently vendors the egui 0.33.3 line because bevy_egui still targets it.
# - When the bridge is upgraded, replace these vendored overrides with the newer bridge stack.
#
# - If you need local Bevy main, do that only on a dedicated Talos branch and
#   replace versioned `bevy = "0.18"` dependencies with path dependencies to:
#   /path/to/your/local/bevy
#
# Full workflow:
# docs/ENGINE_FORK_WORKFLOW.md

# The `talos3d` binary lives in `app/` and is its own workspace. It composes
# the public platform with optional domain extensions from sibling repos, so it
# is validated downstream. CI here checks only the self-contained public
# platform crates listed above.
