[workspace]

[package]
name = "talos3d"
version = "0.1.0"
edition = "2021"

[features]
default = ["native", "terrain"]
native = ["bevy/x11"]
model-api = ["talos3d-core/model-api"]
perf-stats = ["talos3d-core/perf-stats", "talos3d-architecture-elements/perf-stats"]
terrain = ["dep:talos3d-terrain"]

[dependencies]
bevy = { version = "0.19.0-rc.3", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_winit",
    "bevy_window",
    "bevy_text",
    "bevy_ui",
    "tonemapping_luts",
    "webgpu",
    "default_font",
    "png",
    "jpeg",
] }
talos3d-core = { path = "../../talos3d-core/crates/talos3d-core" }
talos3d-architecture-elements = { path = "../../talos3d-architecture/crates/talos3d-architecture-elements" }
talos3d-architecture-core = { path = "../../talos3d-architecture/crates/talos3d-architecture-core" }
talos3d-architecture-product = { path = "../../talos3d-architecture/crates/talos3d-architecture-product" }
talos3d-terrain = { path = "../../talos3d-core/crates/talos3d-terrain", optional = true }

[dev-dependencies]
serde_json = "1"
toml = "0.8"
tempfile = "3"
talos3d-architecture-core = { path = "../../talos3d-architecture/crates/talos3d-architecture-core", features = ["model-api"] }
talos3d-architecture-se = { path = "../../talos3d-architecture/crates/talos3d-architecture-se", features = ["model-api"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
