[package]
name = "talos3d-catalog-client"
version = "0.1.0"
edition = "2021"
description = "Async HTTP client for the talos-catalog knowledge backend service."

# Target support:
# - Native: reqwest uses rustls-tls; WorkspaceRemoteCache + etcetera are
#   compiled in. ChangePoller is driven by a tokio runtime owned by the
#   caller (RemoteCatalogPlugin spawns a dedicated thread + current-thread
#   runtime).
# - wasm32-unknown-unknown: reqwest uses the browser's fetch API (no TLS
#   features); WorkspaceRemoteCache + etcetera are compiled out (no
#   filesystem). Callers use InMemoryCatalogCache and drive the poller via
#   wasm_bindgen_futures::spawn_local.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
url = "2"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "macros", "time", "rt"] }

# Native-only deps: rustls-tls (reqwest does TLS itself) + workspace cache.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
etcetera = "0.8"

# Wasm: reqwest uses the browser fetch; no TLS layer, no streaming feature
# (browser handles framing). getrandom needs the "js" feature so uuid::v4
# works in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tempfile = "3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"
