[package]
name = "talos3d-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
model-api = ["dep:rmcp", "dep:tokio", "dep:schemars", "dep:axum", "dep:tokio-util"]
perf-stats = []

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_anti_alias",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_log",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_winit",
    "bevy_window",
    "bevy_text",
    "bevy_ui",
    "tonemapping_luts",
    "webgpu",
    "default_font",
    "png",
    "jpeg",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17"
bevy_egui = "0.39"
rmcp = { version = "=1.3.0", features = ["server", "transport-io", "transport-streamable-http-server", "macros"], optional = true }
tokio = { version = "1", features = ["rt", "sync", "io-std", "net"], optional = true }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }
schemars = { version = "1", optional = true }
dxf = "0.6"
cadio-dwg = { path = "../cadio-dwg" }
cadio-ir = { path = "../cadio-ir" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
