[package]
name = "talos3d-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
model-api = ["dep:rmcp", "dep:tokio", "dep:schemars", "dep:axum", "dep:tokio-util", "dep:serde_yaml"]
perf-stats = []
webgpu = ["bevy/webgpu"]
webgl2 = ["bevy/webgl2"]

[dependencies]
bevy = { version = "0.19.0-rc.3", default-features = false, features = [
    "bevy_anti_alias",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_log",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_winit",
    "bevy_window",
    "bevy_text",
    "bevy_ui",
    "tonemapping_luts",
    "default_font",
    "png",
    "jpeg",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17"
bevy_egui = "0.40.0-rc.1"
rmcp = { version = "=1.3.0", features = ["server", "transport-io", "transport-streamable-http-server", "macros"], optional = true }
serde_yaml = { version = "0.9", optional = true }
tokio = { version = "1", features = ["rt", "sync", "io-std", "net"], optional = true }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }
schemars = { version = "1", optional = true }
dxf = "0.6"
cadio-dwg = { path = "../cadio-dwg" }
cadio-ir = { path = "../cadio-ir" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
blake3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.8"
semver = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
thiserror = "2"
hex = "0.4"
uuid = { version = "1", features = ["serde"] }
# Lightweight pure-Rust expression evaluator for AuthoringScript ArgExpr::Expr.
# Supports arithmetic, tan/sin/cos/sqrt/pi, and variable contexts (PP82/Change-4).
evalexpr = "11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only persistence substrate deps. `etcetera` provides the OS
# cache-dir discovery for LocalFileArtifactStore. `tokio` is needed by
# the substrate plugin's worker thread bookkeeping (the cloud-side
# CloudArtifactStore lives in appverket-infra/services/products/talos3d/
# talos3d-catalog-client and owns its own runtime there).
etcetera = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
# PP-WCT-1 Stage B: browser fetch transport for the catalog change-feed.
# gloo-net provides a safe async HTTP client over the browser Fetch API.
# wasm-bindgen-futures bridges Rust Futures to JS Promises so we can drive
# the async poll loop from spawn_local without a JS timer dependency.
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
wasm-bindgen-futures = "0.4"
uuid = { version = "1", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "DomRect",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "Location",
    "PointerEvent",
    "Window",
] }

[dev-dependencies]
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
